--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
- Theme Name:   UnderStrap Child
+ Theme Name:   Urth UnderStrap Child
  Theme URI:    https://www.understrap.com
- Description:  UnderStrap Child Theme
- Author:       Holger Koenemann
+ Description:  Urth UnderStrap Child Theme
+ Author:       Dave Rolsky & Holger Koenemann
  Author URI:   http://www.holgerkoenemann.de
  Template:     understrap
  Version:      0.5.1
