--- a/src/sass/understrap/theme/_theme_variables.scss
+++ b/src/sass/understrap/theme/_theme_variables.scss
@@ -3,4 +3,5 @@
 // Just copy a variable from src/sass/bootstrap4/_variables.scss, paste it here and edit the value.
 
 
-$primary: #8753D5; // Thats a sample how you could change a BootStrap variable.
+$primary: #563d7c; // Thats a sample how you could change a BootStrap variable.
+
