--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Alegreya');
+@import url('https://fonts.googleapis.com/css?family=Alegreya|Fira+Sans');
 
 header.site-header {
     font-family: 'Alegreya', serif;
