--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -29,6 +29,20 @@ h2.entry-title {
     font-size: 2rem;
 }
 
+.entry-content {
+    h2 {
+        font-size: 1.8rem;
+    }
+
+    h3 {
+        font-size: 1.5rem;
+    }
+
+    h4 {
+        font-size: 1.2rem;
+    }
+}
+
 .widget {
     margin-bottom: 2rem;
 
